--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" href="/style.css">
     <title>Mini Battle City</title>
 </head>
 
 <body>
-    <div id="app">
+    <!-- <div id="app"> -->
         <div id="game-container"></div>
-    </div>
+        <div id="rotate-overlay" aria-hidden="true">
+            <div class="rotate-content">
+                <div class="rotate-icon">⤺</div>
+                <div class="rotate-text">Please rotate your device to landscape</div>
+            </div>
+        </div>
+    <!-- </div> -->
     <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
